@@ -132,7 +132,7 @@ ul.toc {list-style: none}
 <tr><td></td><td valign="top"><a href="#SEC_Top">cindex copying</a></td><td valign="top"><a href="#SEC_Top">Test headings</a></td></tr>
 <tr><td colspan="3"> <hr></td></tr>
 <tr><th><a name="SEC6_1">H</a></th><td></td><td></td></tr>
-<tr><td></td><td valign="top"><a href="#SEC4">heading in footnote</a></td><td valign="top"><a href="#SEC4">heading in footnote @ <em>heading</em></a></td></tr>
+<tr><td></td><td valign="top"><a href="#IDX1">heading in footnote</a></td><td valign="top"><a href="#SEC4">heading in footnote @ <em>heading</em></a></td></tr>
 <tr><td colspan="3"> <hr></td></tr>
 </table>
 <table><tr><th valign="top">Jump to: &nbsp; </th><td><a href="#SEC6_0" class="summary-letter"><b>C</b></a>
@@ -160,6 +160,7 @@ ul.toc {list-style: none}
 
 <a name="SEC5"></a>
 <h2 class="heading"> heading in footnote @ <em>heading</em> </h2>
+<a name="IDX1"></a>
 <a name="SEC5"></a>
 <h2 class="heading"> second heading in footnote @ <em>heading</em> </h2>
 <hr size="1">
